Finished Basic Accordians

--- a/Accordians/Finish/Basic/index.html
+++ b/Accordians/Finish/Basic/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Accordians | Animated</title>
-  <meta name="description" content="Animated dependency-free accordian menu">
+  <title>Accordians | Basic</title>
+  <meta name="description" content="Basic dependency-free accordian menu">
   <meta name="author" content="DevMarketer">
 
   <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
 <body>
   <!-- content starts here -->
   <div class="container">
-    <h1>Animated Accordians</h1>
+    <h1>Basic Accordians</h1>
 
     <button class="accordian">Accordian #1</button>
     <div class="accordian-content">
