--- a/Accordians/_Start/Basic/index.html
+++ b/Accordians/_Start/Basic/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <!-- content starts here -->
-
+  <div class="container">
+    <h1>Basic Accordians</h1>
+  </div>
   <!-- contend ends here -->
   <script src="scripts.js"></script>
 </body>
