--- a/Accordians/_Start/index.html
+++ b/Accordians/_Start/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Accordians | Animated with Icons</title>
-  <meta name="description" content="Animated accordian menu with icons and no dependency">
+  <title>Accordians | Basic</title>
+  <meta name="description" content="Basic dependency-free accordian menu">
   <meta name="author" content="DevMarketer">
 
   <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,9 @@
 
 <body>
   <!-- content starts here -->
-
+  <div class="container">
+    <h1>Basic Accordians</h1>
+  </div>
   <!-- contend ends here -->
   <script src="scripts.js"></script>
 </body>
