--- a/Accordions/Final/index.html
+++ b/Accordions/Final/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Basic dependency-free accordion menu">
   <meta name="author" content="DevMarketer">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,6 +15,35 @@
   <!-- content starts here -->
   <div class="container">
     <h1>Accordions</h1>
+
+    <button class="accordion">Accordian #1</button>
+    <div class="accordion-content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deleniti molestias necessitatibus quaerat quos incidunt! Quas officiis repellat dolore omnis nihil quo, ratione cupiditate! Sed, deleniti, recusandae! Animi, sapiente, nostrum?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deleniti molestias necessitatibus quaerat quos incidunt! Quas officiis repellat dolore omnis nihil quo, ratione cupiditate! Sed, deleniti, recusandae! Animi, sapiente, nostrum?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deleniti molestias necessitatibus quaerat quos incidunt! Quas officiis repellat dolore omnis nihil quo, ratione cupiditate! Sed, deleniti, recusandae! Animi, sapiente, nostrum?
+      </p>
+    </div>
+
+
+    <button class="accordion">Accordian #2</button>
+    <div class="accordion-content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deleniti molestias necessitatibus quaerat quos incidunt! Quas officiis repellat dolore omnis nihil quo, ratione cupiditate! Sed, deleniti, recusandae! Animi, sapiente, nostrum?
+      </p>
+    </div>
+
+
+    <button class="accordion">Accordian #3</button>
+    <div class="accordion-content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deleniti molestias necessitatibus quaerat quos incidunt! Quas officiis repellat dolore omnis nihil quo, ratione cupiditate! Sed, deleniti, recusandae! Animi, sapiente, nostrum?
+      </p>
+    </div>
   </div>
   <!-- contend ends here -->
   <script src="scripts.js"></script>
