--- a/Accordions/_Start/index.html
+++ b/Accordions/_Start/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Accordians | Basic</title>
-  <meta name="description" content="Basic dependency-free accordian menu">
+  <title>Accordions</title>
+  <meta name="description" content="Basic dependency-free accordion menu">
   <meta name="author" content="DevMarketer">
 
   <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
 <body>
   <!-- content starts here -->
   <div class="container">
-    <h1>Basic Accordians</h1>
+    <h1>Basic Accordion</h1>
   </div>
   <!-- contend ends here -->
   <script src="scripts.js"></script>
